# R2R-Calendar

./: .gitignore  LICENSE  Personal_Journal.md  README.md  setup.py
CrewAI/: .gitignore  LICENSE  README.md  example.py  install.py  pyproject.toml  requirements.txt  structure.txt
CrewAI/src/assistant_team/: __init__.py  main.py  utils.py
CrewAI/src/assistant_team/crews/: __init__.py
CrewAI/src/assistant_team/crews/calendar_crew/: __init__.py  calendar_crew.py
CrewAI/src/assistant_team/crews/calendar_crew/config/: agents.yaml  tasks.yaml
CrewAI/src/assistant_team/tools/: __init__.py
